--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,9 +13,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".About" android:theme="@android:style/Theme.Dialog"/>
+        <activity android:name=".pages.About" android:theme="@android:style/Theme.Dialog"/>
         <activity android:name=".MyActivity"/>
-        <activity android:name=".News"/>
+        <activity android:name=".pages.News"/>
 
     </application>
 </manifest>
